# capyscheme

./: .bacon-locations  .git-blame-ignore-revs  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  INSTALLATION.md  Justfile  Makefile  OUT  README.md  TODO.md  a.out  cliff.toml  core.scm  cps.scm  crossterm.scm  file.scm  file.supp  flake.nix  foo.scm  io-tmp2  libs.scm  lsp-config.scm  main.c  main.scm  out  out.scm  repl.scm  rust-toolchain.toml  rustc-ice-2025-07-28T06_05_04-438463.txt  rustc-ice-2025-07-28T06_05_06-438592.txt  test.scm  tmp-catch-out  tree.scm
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
asmgen/: Cargo.toml
batteries/: args.sls  cc.sld  crossterm.scm  rope.sld  scmline.sld  session.scm
benchmarks/: adaptive-gc.scm  binary-trees-serial.capy.scm  binary-trees.capy.scm
boot/: base.scm  bytevectorio.scm  cli-slim.scm  cli.scm  conio.scm  control.scm  eval.scm  exceptions.scm  expand.scm  fileio.scm  format.scm  interpreter.scm  iosys.scm  libraries.scm  log.scm  main.scm  match.scm  osdep.scm  portio.scm  print.scm  psyntax.scm  reader.scm  records.scm  set.scm  stdio.scm  synclo.scm  syntax-scopes.scm  (+2 more)
capy/: Cargo.toml  build.rs  capy-priv.h  capy.h
capy-driver/: Cargo.toml
capy-driver/src/: main.rs
capy-lsp/: Cargo.toml
capy-lsp/src/: analysis.rs  config.rs  document.rs  main.rs  module_completions.rs  protocol.rs  server.rs  worker.rs  workspace_index.rs
capy-lsp/src/analysis/: completions.rs  diagnostics.rs  imports.rs  symbols.rs  syntax.rs
capy-lsp/src/server/: actions.rs  convert.rs  navigation.rs  semantic.rs  signature.rs  util.rs
capy/src/: bin_support.rs  lib.rs  main.rs  utils.rs
capy/src/api/: mod.rs
capy/src/bytecode/: bytecode_list.rs  code_block.rs  feedback.rs  interpreter.rs  mod.rs  opc.rs  type_profile.rs
capy/src/compiler/: artifact.rs  bootstrap.rs  code_image.rs  code_image_builder.rs  codegen.rs  cranelift.rs  direct.rs  jit.rs  linkutils.rs  mod.rs  module_graph.rs  object.rs  pipeline.rs  symbols.rs
capy/src/compiler/bytecode/: greedy_slotalloc.rs  mod.rs
capy/src/compiler/bytecompiler/: mod.rs  unlinked_code_block.rs
capy/src/compiler/debuginfo/: mod.rs
capy/src/compiler/native/: mod.rs
capy/src/compiler/native/x64/: abi.rs
capy/src/compiler/ssa/: helpers.rs  linear.rs  mod.rs  primitive.rs  thunks.rs  traits.rs  translate.rs  types.rs
capy/src/cps/: builder.rs  contify.rs  fold.rs  free_vars.rs  graph.rs  linear.rs  linear_artifact.rs  linear_pretty.rs  mod.rs  optimizer.rs  packed.rs  pretty.rs  reify.rs  sexp.rs  term.rs
capy/src/cps/graph/: contify.rs  effects.rs  intrinsic.rs  mod.rs  optimize.rs  pretty.rs  term.rs  with_cps.rs
capy/src/cps/linear/: builder.rs  cache.rs  constant.rs  graph.rs  ir.rs  low_prim.rs  mod.rs  rest.rs  switch.rs  tests.rs
capy/src/cps2/: mod.rs  term.rs
capy/src/cps_ssa/: lower.rs  mod.rs  pretty.rs  tests.rs
capy/src/expander/: assignment_elimination.rs  cenv.rs  compile_cps.rs  compile_cps_bytecode.rs  core.rs  eta_expand.rs  fix_letrec.rs  fold.rs  free_vars.rs  inlining.rs  letrectify.rs  library.rs  mod.rs  primitives.rs  synclo.rs  term.rs
capy/src/frontend/: error.rs  mod.rs  num.rs  reader.rs
capy/src/interp/: frame.rs  mod.rs  stack.rs
capy/src/interpreter/: eval.rs  frame.rs
capy/src/jit/: helpers.rs  lower.rs  mod.rs  options.rs  primitive.rs  regalloc.rs  slotalloc.rs  stubs.rs  thunks.rs  trampoline.rs  x64.rs
capy/src/jit/ssa/: mod.rs  primitives.rs
capy/src/jit/x64/: abi.rs  helpers.rs  lower.rs  thunks.rs
capy/src/rsgc/: active_plan.rs  alloc.rs  barrier.rs  cell.rs  collection.rs  conservative.rs  finalizer.rs  global.rs  heuristics.rs  lab.rs  logging.rs  mm.rs  mod.rs  mutator.rs  object.rs  plans.rs  ptr.rs  scanning.rs  sync.rs  traits.rs  util.rs  weak.rs
capy/src/rsgc/alloc/: array.rs  hashmap.rs  trailing.rs
capy/src/rsgc/heuristics/: adaptive.rs  aggressive.rs  compact.rs
capy/src/rsgc/sync/: monitor.rs  safepoint.rs  signal.rs  thread.rs
capy/src/runtime/: class.rs  code_image.rs  code_memory.rs  fasl.rs  fluids.rs  gdb_jit.rs  global.rs  image.rs  mod.rs  modules.rs  stats.rs  symbols.rs  thread.rs  value.rs  vm.rs  vmthread.rs
capy/src/runtime/class/: builtin.rs  descriptor.rs  flags.rs  generic.rs  hooks.rs  instance.rs  mod.rs  ops.rs  parse.rs  slot.rs  table.rs  tests.rs
capy/src/runtime/fasl/: graph.rs  mod.rs  patch.rs  reader.rs  reloc.rs  tests.rs  writer.rs
capy/src/runtime/image/: builder.rs  reader.rs
capy/src/runtime/libs/: expeditor.rs  mod.rs
capy/src/runtime/value/: boxed.rs  conversions.rs  environment.rs  eq.rs  global.rs  hamt.rs  hash.rs  header.rs  list.rs  number.rs  port.rs  print.rs  proc.rs  string.rs  structure.rs  symbols.rs  type_code.rs  vector.rs  weak_set.rs  weak_table.rs  weak_value.rs
capy/src/runtime/value/number/: bigint.rs  mod.rs  parse.rs  print.rs
capy/src/runtime/value/proc/: closure.rs  code.rs  mod.rs  native.rs  registry.rs  relocatable.rs  tests.rs
capy/src/runtime/vm/: arith.rs  base.rs  control.rs  debug.rs  dl.rs  errors.rs  eval.rs  exceptions.rs  expand.rs  extensions.rs  ffi.rs  gc.rs  hash.rs  interrupts.rs  io.rs  libraries.rs  list.rs  load.rs  memoize.rs  persistent_map.rs  persistent_set.rs  primitive.rs  records.rs  require.rs  strings.rs  syntax.rs  threading.rs  throw.rs  thunks.rs  trampolines.rs  vector.rs
capy/src/runtime/vm/load/: artifact.rs  compile.rs  lock.rs  mod.rs  paths.rs  policy.rs  scheme.rs
capy/src/utils/: easy_bitfield.rs  generic_static.rs  pass_profile.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: ast.rs  cps.rs  dot.rs  expand.rs  il.rs  lib.rs  main.rs  number.rs  parser.rs  psyntax.rs  source.rs  synrules.rs
crates/compiler/src/cps/: contification.rs  convert.rs  optimizer.rs  pretty.rs  reify.rs  term.rs
crates/compiler/src/frontend/: ast.rs  mod.rs  number.rs  parser.rs  source.rs
crates/compiler/src/il/: assignment_elimination.rs  fix_letrec.rs  pretty.rs  primitives.rs  term.rs
(+544 files in other folders)
