[package]
name = "capyscheme"
version = "0.1.1"
edition = "2024"

[dependencies]
ahash = "0.8.12"
alloca = "0.4.0"
bitflags = "2.9.1"
bytemuck = "1.23.0"

derive_more = { version = "2.0.1", features = ["try_from"] }
libc = "0.2.172"
libm = "0.2.15"
num-bigint = "0.4.6"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
rand = "0.9.1"
rsgc = { git = "https://codeberg.org/playxe/rsgc.git" }
simplehash = "0.1.3"
smallvec = "1.15.0"
tree-sitter = "0.25.4"
tree-sitter-scheme = { git = "https://github.com/6cdh/tree-sitter-scheme" }
