[workspace]
resolver = "3"

members = ["capy", "capy-driver"]
default-members = ["capy"]

[workspace.dependencies]
rsgc = { path = "../RSGC", default-features = false }
#rsgc = { git = "https://codeberg.org/playxe/rsgc", branch = "main" }
cranelift-jit = "0.123.1"
cranelift = "0.123.1"
cranelift-codegen = "0.123.1"
cranelift-module = "0.123.1"
cranelift-object = "0.123.1"
libloading = "0.8.8"
target-lexicon = "*"
addr2line = "*"
gimli = "*"
object = "*"
cfg-if = "1.0.0"
libc = "*"

[profile.release]
lto = true
debug = false
incremental = false

[profile.dev]
incremental = false
