[workspace]
resolver = "3"

members = ["capy", "capy-derive", "capy-driver", "extensions/capy-clang"]
default-members = ["capy"]

[workspace.dependencies]
#rsgc = { path = "../RSGC", default-features = false }
rsgc = { git = "https://codeberg.org/playxe/rsgc", default-features = false }
cranelift-jit = "0.125.3"
cranelift = "0.125.3"
cranelift-codegen = "0.125.3"
cranelift-module = "0.125.3"
cranelift-object = "0.125.3"
libloading = "0.8.9"
target-lexicon = "*"
gimli = "0.32.2"
object = { version = "0.37.3", features = ["macho"] }
libc = "0.2.174"
atomic = "0.6.1"
bitflags = "2.10.0"
bytemuck = "1.10.2"
easy-bitfield = "0.1.0"
env_logger = "0.11.8"
libm = "0.2.15"
num-bigint = "0.4.6"
rand = "0.9.2"
simplehash = "0.1.3"
num = "0.4.3"
tree-sitter = "0.25.5"
tree-sitter-scheme = { git = "https://github.com/6cdh/tree-sitter-scheme" }
paste = "1.0.15"
pretty = "0.12.4"
hashlink = "0.11.0"
petgraph = "0.8.2"
sha3 = "0.10.8"
hex = "*"
log = "0.4.27"
memmap2 = "0.9.8"
probe = "0.5.1"
lexical = { version = "7.0.4", features = ["power-of-two"] }
backtrace = "0.3.75"
which = "8.0.0"
libffi = { version = "5.0.0" }
tinyvec = "1.6.0"
unicode-general-category = "1.1.0"
unicode-normalization = "0.1.25"
clang = { version = "2.0.0", default-features = false }

capy = { path = "capy" }
capy-derive = { path = "capy-derive" }

[profile.release]
lto = false
debug = true
incremental = true
rpath = true

[profile.dev]
incremental = true
opt-level = 0
rpath = true
