[package]
name = "capy-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
async-lsp = { version = "0.2.4", features = ["client-monitor", "omni-trait", "stdio", "tokio", "tracing"] }
futures = "0.3"
lsp-types = "0.95.1"
serde = { workspace = true }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt", "sync", "time"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
