[package]
name = "capy"
version = "1.0.2"
edition = "2024"

[dependencies]
tinyvec = { workspace = true, features = ["alloc"] }
atomic.workspace = true
bitflags.workspace = true
bytemuck.workspace = true
easy-bitfield.workspace = true
env_logger.workspace = true
libm.workspace = true
num-bigint = { workspace = true, optional = true }
num = { workspace = true }
rand.workspace = true
mmtk.workspace = true
simplehash.workspace = true

tree-sitter = { workspace = true, optional = true }
tree-sitter-scheme = { workspace = true, optional = true }
rustix = { version = "*", features = ["fs", "pipe", "event"] }
paste.workspace = true
pretty.workspace = true
hashlink.workspace = true
petgraph.workspace = true
libc.workspace = true
cranelift-jit.workspace = true
cranelift.workspace = true
cranelift-codegen.workspace = true
cranelift-module.workspace = true
cranelift-object.workspace = true
libloading.workspace = true
hex.workspace = true
log.workspace = true
gimli.workspace = true
target-lexicon.workspace = true
object.workspace = true
memmap2.workspace = true
probe.workspace = true
lexical.workspace = true
backtrace.workspace = true
which.workspace = true
libffi.workspace = true
unicode-general-category.workspace = true
unicode-normalization.workspace = true
uuid = { version = "1.18.1", features = ["v4"] }
hostname = "0.4.1"
errno = "0.3.14"
stacker = "0.1.22"
#im = "15.1.0"
parking_lot = "0.12.5"
icu = { version = "2.0.0", features = ["compiled_data"] }
sys-locale = "0.3.2"
capy-derive.workspace = true
cranelift-entity = "0.125.3"
polling = "3.11.0"

[dependencies.im]
version = "15.1.0"
package = "im-rc"

[lib]
crate-type = ["cdylib"]

[features]
default = ["portable", "expeditor", "bootstrap"]
portable = []
aslr = []
expeditor = []
bootstrap = ["tree-sitter", "tree-sitter-scheme", "num-bigint"]

[build-dependencies]
cbindgen = "*"
