[package]
name = "capyc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
hashlink = "0.10.0"
chumsky = { version = "0.10.1", features = ["pratt", "unstable"] }
lasso = { version = "0.7.3", features = ["multi-threaded"] }
num = "0.4.3"
tree-sitter = "0.25.5"
tree-sitter-scheme = { git = "https://github.com/6cdh/tree-sitter-scheme" }
ariadne = "0.5.1"
im = "15.1.0"
once_cell = "1.21.3"
pretty = "0.12.4"
cranelift-entity = "0.121.1"
paste = "1.0.15"
smallvec = "1.15.1"
petgraph = "0.8.2"
itertools = "0.14.0"
quote-sexp = { path = "../quote-sexp" }